force-app/main/default/objects/DataSeederTemplate__c/DataSeederTemplate__c.object-meta.xml
<CustomObject>
    <description>Stores data seeder templates for generating test data</description>
    <label>DataSeeder Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataSeeder Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 