force-app/main/default/objects/DataSeederTemplate__c/fields/ConfigurationJSON__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationJSON__c</fullName>
    <description>JSON configuration for the data generation</description>
    <inlineHelpText>JSON configuration defining objects, fields, and relationships</inlineHelpText>
    <label>Configuration JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField> 