force-app/main/default/objects/DataSeederTemplate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the template purpose</description>
    <inlineHelpText>Enter a description of what this template is used for</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField> 