force-app/main/default/objects/DataSeederTemplate__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the template is active and available for use</description>
    <inlineHelpText>Check to make this template available for use</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField> 